fix(deployment): 修復 Tunnel 路由、CORS/CSRF 設定與導覽體驗
- 更新 tunnel_config.yml 以將 /api 請求導向後端
- 在 docker-compose.yml 中改用 Token 驗證取代憑證檔案
- 將公開網域加入 ALLOWED_HOSTS、CORS 與 CSRF 信任清單
- 統一返回按鈕行為，導向儀表板首頁

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,10 +50,11 @@ services:
   tunnel:
     image: cloudflare/cloudflared:latest
     restart: always
+    environment:
+      - TUNNEL_TOKEN=eyJhIjoiNjIwZTA2ZmI5NzI5Y2ZmMWE2YzNlMWQ4YzQ3Mzk1MDMiLCJ0IjoiZjI4ODFiNGQtNzJkMC00NjZiLWFlNmMtNDRjYmMwYmEzY2EwIiwicyI6IjVaVldhVDZ3NFFlZENtOXlMYkhwclA0MjlPRUdoelhZSlVrZEM1cEpxRkk9In0=
     command: tunnel run
     volumes:
       - ./tunnel_config.yml:/etc/cloudflared/config.yml
-      - ./tunnel_creds.json:/etc/cloudflared/creds.json
     depends_on:
       - frontend
       - backend
